code cleaned, gui still not appealing

--- a/tp1.ipynb
+++ b/tp1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,20 +154,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\ndocument_data = load_documents()  # Load the documents\\nprocessed_data = preprocess_data(document_data, 'Split', 'Lancaster')\\nnum_documents = len(document_data)\\nterm_frequencies = calculate_term_frequencies(processed_data)\\nterm_weights = calculate_term_weights(term_frequencies, processed_data, num_documents)\\ndescriptorfile=descriptorfile(processed_data,term_weights)\\nprint(descriptorfile)\\n\""
-      ]
-     },
-     "execution_count": 145,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def descriptorfile(processed_data, term_weights):\n",
     "    all_descriptors = []\n",
@@ -177,40 +166,20 @@
     "            frequency = term_weights[doc_id][term]\n",
     "            all_descriptors.append(f\"{doc_id}: {term} - Frequency: {term_frequencies[doc_id][term]} - Weight: {frequency}\")\n",
     "\n",
-    "    return all_descriptors\n",
-    "\"\"\"\n",
-    "document_data = load_documents()  # Load the documents\n",
-    "processed_data = preprocess_data(document_data, 'Split', 'Lancaster')\n",
-    "num_documents = len(document_data)\n",
-    "term_frequencies = calculate_term_frequencies(processed_data)\n",
-    "term_weights = calculate_term_weights(term_frequencies, processed_data, num_documents)\n",
-    "descriptorfile=descriptorfile(processed_data,term_weights)\n",
-    "print(descriptorfile)\n",
-    "\"\"\""
+    "    return all_descriptors\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'document_data=load_documents()\\nprocessed_data = preprocess_data(document_data)\\nnum_documents = len(document_data)\\nterm_frequencies = calculate_term_frequencies(processed_data)\\nterm_weights = calculate_term_weights(term_frequencies, processed_data, num_documents)'"
-      ]
-     },
-     "execution_count": 146,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "'''document_data=load_documents()\n",
-    "processed_data = preprocess_data(document_data)\n",
+    "document_data=load_documents()\n",
+    "processed_data = preprocess_data(document_data,\"Split\",\"Lancaster\")\n",
     "num_documents = len(document_data)\n",
     "term_frequencies = calculate_term_frequencies(processed_data)\n",
-    "term_weights = calculate_term_weights(term_frequencies, processed_data, num_documents)'''\n"
+    "term_weights = calculate_term_weights(term_frequencies, processed_data, num_documents)\n"
    ]
   },
   {
@@ -223,31 +192,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'document_data=load_documents()\\n# Create a descriptor file for all documents\\ndescriptor_filename = \"all_descriptors.txt\"\\nall_descriptors = descriptorfile(processed_data, term_weights)\\nwith open(descriptor_filename, \"w\") as file:\\n    for descriptor in all_descriptors:\\n        file.write(f\"{descriptor}\\n\")\\nprint(f\"Descriptor file created for all documents: {descriptor_filename}\")\\n#inverted \\ninverted_index, term_frequencies = create_inverted_index(processed_data)\\n\\nwith open(\"inverted_index.txt\", \"w\") as text_file:\\n    for term, doc_list in inverted_index.items():\\n        text_file.write(f\"{term}:\\n\")\\n        for doc_id in doc_list:\\n            term_freq = term_frequencies.get(doc_id, {}).get(term, 0)\\n            term_weight = term_weights.get(doc_id, {}).get(term, 0.0)\\n            text_file.write(f\"  {doc_id}: Frequency: {term_freq} - Weight: {term_weight}\\n\")\\n\\n\\nprint(\"Inverted index with term weights saved to \\'inverted_index.txt.\\'\")'"
-      ]
-     },
-     "execution_count": 147,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Descriptor file created for all documents as all_descriptors.txt\n",
+      "Inverted index with term weights saved to 'inverted_index.txt.'\n"
+     ]
     }
    ],
    "source": [
-    "'''document_data=load_documents()\n",
+    "document_data=load_documents()\n",
     "# Create a descriptor file for all documents\n",
     "descriptor_filename = \"all_descriptors.txt\"\n",
     "all_descriptors = descriptorfile(processed_data, term_weights)\n",
     "with open(descriptor_filename, \"w\") as file:\n",
     "    for descriptor in all_descriptors:\n",
     "        file.write(f\"{descriptor}\\n\")\n",
-    "print(f\"Descriptor file created for all documents: {descriptor_filename}\")\n",
+    "print(\"Descriptor file created for all documents as all_descriptors.txt\")\n",
     "#inverted \n",
-    "inverted_index, term_frequencies = create_inverted_index(processed_data)\n",
+    "inverted_index, term_frequencies = inverted_index_file(processed_data)\n",
     "\n",
     "with open(\"inverted_index.txt\", \"w\") as text_file:\n",
     "    for term, doc_list in inverted_index.items():\n",
@@ -258,12 +225,12 @@
     "            text_file.write(f\"  {doc_id}: Frequency: {term_freq} - Weight: {term_weight}\\n\")\n",
     "\n",
     "\n",
-    "print(\"Inverted index with term weights saved to 'inverted_index.txt.'\")'''"
+    "print(\"Inverted index with term weights saved to 'inverted_index.txt.'\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,31 +277,8 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "inverted_index = inverted_index(processed_data, term_frequencies, term_weights)\n",
-    "target_doc_id = \"D1\"  # Replace with the doc_id you want to filter by\n",
-    "terms_with_doc_id = get_terms_by_doc_id_inverted(inverted_index, target_doc_id)\n",
-    "for term_tuple in terms_with_doc_id:\n",
-    "    print(term_tuple)\n",
-    "\n",
-    "\n",
-    "\n",
-    "    # Example usage:\n",
-    "'''\n",
-    "all_descriptors = descriptor(processed_data, term_weights, term_frequencies)\n",
-    "target_doc_id = \"D1\"  # Replace with the doc_id you want to filter by\n",
-    "terms_with_doc_id = get_terms_by_doc_id(all_descriptors, target_doc_id)\n",
-    "\n",
-    "for term_tuple in terms_with_doc_id:\n",
-    "    print(term_tuple)'''"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
